# AdePT_LLAMA_ACAT22

./: .gitmodules  CMakeLists.txt  README.md
Example19_baseline/: CMakeLists.txt
Example19_llama/: CMakeLists.txt  electrons.cu  example.cuh  gammas.cu  main.cu
Example19_llama_db/: CMakeLists.txt  electrons.cu  example.cuh  gammas.cu  main.cu
Example19_llama_trace/: CMakeLists.txt  example.cuh  main.cu
